--- a/gl-scene-perlin-generator.cabal
+++ b/gl-scene-perlin-generator.cabal
@@ -19,6 +19,7 @@ library
   other-modules:       Scene.PerlinGenerator.Algo
                        Scene.PerlinGenerator.GeneratorContext
                        Scene.PerlinGenerator.GeneratorQuery
+                       Scene.PerlinGenerator.WeightGenerators
   build-depends:       base >= 4.7 && < 5
                      , gl-scene
                      , gl-scene-math
