--- a/gl-scene-perlin-generator.cabal
+++ b/gl-scene-perlin-generator.cabal
@@ -53,11 +53,14 @@ test-suite perlin-generator-tests
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
   main-is:             Main.hs
+  other-modules:       TileGeneratorTests
   build-depends:       base >= 4.7 && < 5
                      , gl-scene-perlin-generator
                      , test-framework
                      , test-framework-hunit
                      , HUnit
+                     , linear
+                     , vector
   default-language:    Haskell2010
   ghc-options:         -Wall
 
